shared/src/test/data/yeast/invalid-json/incomplete-entry-4.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1'
Indicator           9,  2,  7 '\"'
EndScalar          10,  2,  8 ''
Indicator          10,  2,  8 ':'
WhiteSpace         11,  2,  9 ' '
BeginScalar        12,  2, 10 ''
Indicator          12,  2, 10 '\"'
Text               13,  2, 11 'va,\n  '
Indicator          19,  3,  2 '\"'
EndScalar          20,  3,  3 ''
Error              20,  3,  3 'key2\"'
Indicator          25,  3,  8 ':'
WhiteSpace         26,  3,  9 ' '
BeginScalar        27,  3, 10 ''
Indicator          27,  3, 10 '\"'
Text               28,  3, 11 'value2'
Indicator          34,  3, 17 '\"'
EndScalar          35,  3, 18 ''
LineBreak          35,  3, 18 '\n'
EndMapping         36,  4,  0 '}'
